--- a/estilos.css
+++ b/estilos.css
@@ -136,6 +136,40 @@ h2 {
   overflow: auto;
 }
 
+.multimediaCarrusel {
+  background-color: rgba(3, 84, 84, 0.5);
+  text-align: center;
+  display: grid;
+  justify-content: center;
+}
+
+.multimediaEscenas {
+  text-align: center;
+  background: linear-gradient(to bottom, rgba(15, 49, 48, 0.9), rgb(15, 49, 48));
+}
+.multimediaEscenas img:hover {
+  transform: scale(1.2, 1.2);
+}
+
+.multimediaReparto {
+  text-align: center;
+  background: linear-gradient(to bottom, rgb(15, 49, 48), #041E1F);
+}
+.multimediaReparto img:hover {
+  transform: scale(1.2, 1.2);
+}
+
+.multimediaVideo {
+  text-align: center;
+  display: grid;
+  justify-content: center;
+  background-color: #041E1F;
+  padding: 10px;
+}
+.multimediaVideo iframe {
+  height: 350px;
+}
+
 footer {
   letter-spacing: 2px;
 }/*# sourceMappingURL=estilos.css.map */
