--- a/estilos.css
+++ b/estilos.css
@@ -127,11 +127,33 @@ h2 {
   font-family: "Lato", sans-serif;
 }
 
-.indexMorbicancion_tabla {
+/*inicio map*/
+.btn--lis1 {
+  color: white;
+}
+
+.btn--lis2 {
+  color: antiquewhite;
+}
+
+.btn--lis3 {
+  color: grey;
+}
+
+.btn--lis4 {
+  color: rgb(46, 46, 46);
+}
+
+.btn--lis5 {
+  color: black;
+}
+
+/*fin map*/
+.indexMorbicancion_tabla, .multimediaEscenas {
   background-color: #041E1F;
   font-family: "Lato", sans-serif;
 }
-.indexMorbicancion_tabla .morbicancion {
+.indexMorbicancion_tabla .morbicancion, .multimediaEscenas .morbicancion {
   height: 350px;
   overflow: auto;
 }
@@ -145,25 +167,28 @@ h2 {
 
 .multimediaEscenas {
   text-align: center;
-  background: linear-gradient(to bottom, rgba(15, 49, 48, 0.9), rgb(15, 49, 48));
 }
 .multimediaEscenas img:hover {
   transform: scale(1.2, 1.2);
 }
 
 .multimediaReparto {
+  height: auto;
+  width: 100%;
+  background-color: rgba(15, 49, 48, 0.9);
   text-align: center;
-  background: linear-gradient(to bottom, rgb(15, 49, 48), #041E1F);
 }
 .multimediaReparto img:hover {
   transform: scale(1.2, 1.2);
 }
 
 .multimediaVideo {
+  height: auto;
+  width: 100%;
+  background-color: rgb(15, 49, 48);
   text-align: center;
   display: grid;
   justify-content: center;
-  background-color: #041E1F;
   padding: 10px;
 }
 .multimediaVideo iframe {
