--- a/estilos.scss
+++ b/estilos.scss
@@ -128,6 +128,24 @@ h2 {
     font-family: $font3;
 }
 
+/*inicio map*/
+$listas: (
+    lis1: white,
+    lis2: antiquewhite,
+    lis3: grey,
+    lis4: rgb(46, 46, 46),
+    lis5: black
+);
+
+@each $lis1,
+$font in $listas {
+    .btn--#{$lis1} {
+        color: $font;
+    }
+}
+
+/*fin map*/
+
 .indexMorbicancion_tabla {
     background-color: $colorb4;
     font-family: $font3;
@@ -147,17 +165,23 @@ h2 {
 }
 
 .multimediaEscenas {
+    @extend .indexMorbicancion_tabla;
     text-align: center;
-    background: linear-gradient(to bottom, $colorb2, $colorb3);
 
     img:hover {
         transform: scale(1.2, 1.2);
     }
 }
 
+@mixin sizes($width, $height, $bcolor) {
+    height: $height;
+width: $width;
+background-color: $bcolor;
+}
+
 .multimediaReparto {
+    @include sizes(100%, auto, $colorb2);
     text-align: center;
-    background: linear-gradient(to bottom, $colorb3, $colorb4);
 
     img:hover {
         transform: scale(1.2, 1.2);
@@ -165,10 +189,10 @@ h2 {
 }
 
 .multimediaVideo {
+    @include sizes(100%, auto, $colorb3);
     text-align: center;
     display: grid;
     justify-content: center;
-    background-color: $colorb4;
     padding: 10px;
 
     iframe {
